# pkgconfig-sys-stubs

./: Makefile.in  configure  configure.ac
